# NeuralNetworkExample

./: .gitignore  README.md  configure.sh
networks/arithmetic/: 0  asdf  config.txt  generate_examples.py  testing_data.txt  testing_output.csv  topology.txt  training_data.txt  training_sigmoid.csv  training_tanh.csv  wert
networks/letterrec/: config.txt  convert.py  data.txt  test_result.csv  testing.txt  topology.txt  training.csv  training_data.txt
networks/xor/: config.txt  test_results.csv  topology.txt  training.csv  training_tanh.csv
src/: CMakeLists.txt  README.md  main.cpp
src/NeuralNetworkLib/: CMakeLists.txt  NetworkReflection.cpp  NetworkReflection.h  NeuralNetwork.cpp  NeuralNetwork.h  WeightFile.cpp  WeightFile.h  maths.cpp  maths.h
